[workspace]
resolver = "3"
members = [
  # compiler
  "compiler/muonc",
  "compiler/muonc_entity",
  "compiler/muonc_errors",
  "compiler/muonc_hir",
  "compiler/muonc_lexer",
  "compiler/muonc_macros",
  "compiler/muonc_middle",
  "compiler/muonc_parser",
  "compiler/muonc_span",
  "compiler/muonc_token",
  "compiler/muonc_utils",
]

[workspace.package]
version = "0.1.0"
license = "MIT"
edition = "2024"

[workspace.dependencies]
muonc_entity = { path = "compiler/muonc_entity" }
muonc_errors = { path = "compiler/muonc_errors" }
muonc_hir = { path = "compiler/muonc_hir" }
muonc_lexer = { path = "compiler/muonc_lexer" }
muonc_macros = { path = "compiler/muonc_macros" }
muonc_middle = { path = "compiler/muonc_middle" }
muonc_parser = { path = "compiler/muonc_parser" }
muonc_span = { path = "compiler/muonc_span" }
muonc_token = { path = "compiler/muonc_token" }
muonc_utils = { path = "compiler/muonc_utils" }

# other dependencies
bitflags = "2.10"
boxcar = "0.2"
clap = { version = "4.5", features = ["derive"] }
enum-ordinalize = "4.3"
indexmap = "2.13"
thiserror = "2.0"
termcolor = "1.4"
