[package]
name = "muonc_hir"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
muonc_entity = { workspace = true }
muonc_errors = { workspace = true }
muonc_lexer = { workspace = true }
muonc_middle = { workspace = true }
muonc_parser = { workspace = true }
muonc_span = { workspace = true }
muonc_token = { workspace = true }
muonc_utils = { workspace = true }

# other dependencies
either = "1.15"
indexmap = { workspace = true }
