[package]
name = "muonc_parser"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
muonc_errors = { workspace = true }
muonc_middle = { workspace = true }
muonc_span = { workspace = true }
muonc_token = { workspace = true }
muonc_utils = { workspace = true }

# other dependencies
bitflags = { workspace = true }
